feat: 서비스 구현

--- a/service/src/main/AndroidManifest.xml
+++ b/service/src/main/AndroidManifest.xml
@@ -9,6 +9,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KkangSsam">
         <activity
+            android:name=".test1.Test1Activity"
+            android:exported="false" />
+
+        <service
+            android:name=".test1.MyService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
