--- a/intent/src/main/AndroidManifest.xml
+++ b/intent/src/main/AndroidManifest.xml
@@ -9,6 +9,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KkangSsam">
         <activity
+            android:name=".test5.Test5Activity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".test4.Test4Activity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".test3.Test3Activity"
             android:exported="false" />
         <activity
